syntax = "proto3";

package greet;
option go_package = "greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message ManyTimesGreetRequest {
    Greeting greeting = 1;
}

message ManyTimesGreetResponse {
    string greeting = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryoneRequest{
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

service GreetService{
    //Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};
    // Server Stream
    rpc GreetManyTimes(ManyTimesGreetRequest) returns (stream ManyTimesGreetResponse) {};

    // Client Streaming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

    // Bi-directional streaming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}